fixed hover bug on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,12 @@ b {
 
 .leaflet-popup-pane a:hover {
     font-weight: 700;
-    font-size: 11.6px;
+    letter-spacing: 0;
 }
 
 #about a:hover {
     font-weight: 700;
-    font-size: 0.985em !important;
+    letter-spacing: 0;
 }
 
 #mainmap {
@@ -224,7 +224,6 @@ tr {
 
 .btn-grey:hover {
     font-weight: 750;
-    font-size: 12.6px !important;
 }
 
 input[type="checkbox" i] { 
